--- a/imgui.ini
+++ b/imgui.ini
@@ -90,7 +90,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,733
-Size=443,347
+Size=489,347
 Collapsed=0
 DockId=0x0000001F,0
 
@@ -253,40 +253,55 @@ Collapsed=0
 
 [Window][###box_hierarchy_GameBoard]
 Pos=0,22
-Size=443,709
+Size=489,709
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][###box_hierarchy_CardPicker]
 Pos=0,22
-Size=443,709
+Size=489,709
 Collapsed=0
 DockId=0x00000015,1
 
 [Window][BoxEditor Global Options]
-Pos=637,473
-Size=607,558
+Pos=863,541
+Size=645,484
 Collapsed=0
 
 [Window][###selected_box_popup_CardPicker]
-Pos=1253,494
-Size=358,544
+Pos=1153,444
+Size=382,518
 Collapsed=0
 
 [Window][###selected_box_popup_GameBoard]
-Pos=1120,390
-Size=358,604
+Pos=1395,779
+Size=662,518
 Collapsed=0
 
 [Window][###box_hierarchy_card.yaml]
 Pos=0,520
-Size=387,560
+Size=536,560
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][###selected_box_popup_card.yaml]
 Pos=1487,305
 Size=415,682
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=518,70
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=518,70
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=283,54
 Collapsed=0
 
 [Table][0x31804F77,2]
@@ -427,12 +442,12 @@ Column 1  Width=25
 [Table][0x059E338D,2]
 RefScale=16
 Column 0  Weight=1.0000
-Column 1  Width=65
+Column 1  Width=96
 
 [Table][0xF517E11A,2]
 RefScale=16
 Column 0  Weight=1.0000
-Column 1  Width=65
+Column 1  Width=73
 
 [Table][0x1486B029,2]
 Column 0  Weight=1.0000
@@ -453,14 +468,14 @@ Column 1  Width=65
 
 [Docking][Data]
 DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=443,1058 Split=Y
+  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=489,1058 Split=Y
     DockNode                ID=0x0000000D Parent=0x0000000C SizeRef=456,477 Selected=0xB54AE55D
     DockNode                ID=0x00000013 Parent=0x0000000C SizeRef=456,483 Split=Y Selected=0xE192E354
       DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0x36E830FD
       DockNode              ID=0x00000019 Parent=0x00000013 SizeRef=428,347 Split=Y Selected=0xE192E354
         DockNode            ID=0x0000001F Parent=0x00000019 SizeRef=418,496 Selected=0xE192E354
         DockNode            ID=0x00000020 Parent=0x00000019 SizeRef=418,560 Selected=0xD3D128AE
-  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1475,1058 Split=X
+  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1429,1058 Split=X
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000014 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
